# invoice_app

./: .gitignore  Brewfile  CMakeLists.txt  README.md  main.cpp
.opencode/agents/: invoice-optimizer.md
docs/plans/: 2026-02-21-invoice-manager-desktop-light-design.md
plan/: qt_cpp_review_report.md
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/data/: invoice_database.cpp  invoice_database.h
src/domain/: invoice.h
src/invoice_manager_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/invoice_manager_autogen/GQ6NBGVJMG/: moc_async_pdf_processor.cpp  moc_async_pdf_processor.cpp.d
src/invoice_manager_autogen/YPKJ5OE7LN/: moc_invoice_manager_window.cpp  moc_invoice_manager_window.cpp.d  moc_manual_entry_dialog.cpp  moc_manual_entry_dialog.cpp.d  moc_project_selection_dialog.cpp  moc_project_selection_dialog.cpp.d
src/services/: async_pdf_processor.cpp  async_pdf_processor.h  pdf_text_extractor.cpp  pdf_text_extractor.h
src/ui/: invoice_detail_widget.cpp  invoice_detail_widget.h  invoice_list_widget.cpp  invoice_list_widget.h  invoice_manager_window.cpp  invoice_manager_window.h  manual_entry_dialog.cpp  manual_entry_dialog.h  project_selection_dialog.cpp  project_selection_dialog.h  sidebar_widget.cpp  sidebar_widget.h
